--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ language: objective-c
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/Slux.xcworkspace -scheme Slux-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/Slux.xcworkspace -scheme Slux-Example -destination 'platform=iOS Simulator,name=iPhone 5s' clean test
 - pod lib lint
